force-app/main/default/objects/Asset_Issue__c/Asset_Issue__c.object-meta.xml
<CustomObject>
    <label>Asset Transaction</label>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Transaction</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>