force-app/main/default/objects/Asset_Issue__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>Asset_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>