force-app/main/default/objects/Asset_Issue__c/fields/Close_date__c.field-meta.xml
<CustomField>
    <fullName>Close_date__c</fullName>
    <label>Close date</label>
    <type>Date</type>
</CustomField>