force-app/main/default/objects/Asset_Issue__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Asset_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>