force-app/main/default/objects/Asset_Issue__c/fields/Retailer_Account__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Asset_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>