force-app/main/default/objects/Asset_Issue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temperature Problems</fullName>
            </value>
            <value>
                <fullName>Frost or Ice Build-Up</fullName>
            </value>
            <value>
                <fullName>Compressor Issues</fullName>
            </value>
            <value>
                <fullName>Door Problems</fullName>
            </value>
            <value>
                <fullName>Power Supply or Electrical Issues</fullName>
            </value>
            <value>
                <fullName>Noisy Operation</fullName>
            </value>
            <value>
                <fullName>Water Leaks</fullName>
            </value>
            <value>
                <fullName>Defrosting Issues</fullName>
            </value>
            <value>
                <fullName>Fan Issues</fullName>
            </value>
            <value>
                <fullName>Temperature Control or Thermostat Problems</fullName>
            </value>
            <value>
                <fullName>Leaks or Odors</fullName>
            </value>
            <value>
                <fullName>Defective Ice Maker</fullName>
            </value>
            <value>
                <fullName>Control Panel Malfunction</fullName>
            </value>
            <value>
                <fullName>Overheating</fullName>
            </value>
            <value>
                <fullName>Refrigerant Leaks</fullName>
            </value>
            <value>
                <fullName>Physical Damage</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>