force-app/main/default/objects/Asset_Issue__c/fields/Visit_Task__c.field-meta.xml
<CustomField>
    <fullName>Visit_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Task</label>
    <referenceTo>Visit_Task__c</referenceTo>
    <relationshipName>Asset_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>