force-app/main/default/objects/Asset_Issue__c/recordTypes/Asset_Audit.recordType-meta.xml
<RecordType>
    <fullName>Asset_Audit</fullName>
    <active>true</active>
    <label>Asset Audit</label>
</RecordType>