force-app/main/default/objects/Asset_Issue__c/listViews/Asset_Issues.listView-meta.xml
<ListView>
    <fullName>Asset_Issues</fullName>
    <columns>NAME</columns>
    <columns>Asset__c</columns>
    <columns>ContactId__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Issue_Reason__c</columns>
    <columns>Retailer_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset_Issue__c.Asset_Issue</value>
    </filters>
    <label>Asset Issues</label>
</ListView>